adding the courtesy Analysis

--- a/tratando_bases.ipynb
+++ b/tratando_bases.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "2ebd5e52",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "b77dc804",
    "metadata": {},
    "outputs": [],
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "e3f8296c",
    "metadata": {},
    "outputs": [
@@ -679,6 +679,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Base vmb_2024_01.xlsx Concatenada com Sucesso!\n",
+      "Base vmb_2024_02.xlsx Concatenada com Sucesso!\n",
+      "Base vmb_2024_03.xlsx Concatenada com Sucesso!\n",
+      "Base vmb_2024_04.xlsx Concatenada com Sucesso!\n",
+      "Base vmb_2024_05.xlsx Concatenada com Sucesso!\n",
+      "Base vmb_2024_06.xlsx Concatenada com Sucesso!\n",
+      "Base vmb_2024_07.xlsx Concatenada com Sucesso!\n",
+      "Base vmb_2024_08.xlsx Concatenada com Sucesso!\n",
+      "Base vmb_2024_09.xlsx Concatenada com Sucesso!\n",
+      "Base vmb_2024_10.xlsx Concatenada com Sucesso!\n",
+      "Base vmb_2024_11 copy.xlsx Concatenada com Sucesso!\n",
+      "Base vmb_2024_12.xlsx Concatenada com Sucesso!\n",
       "Base vmb_2025_01.xlsx Concatenada com Sucesso!\n",
       "Base vmb_2025_02.xlsx Concatenada com Sucesso!\n",
       "Base vmb_2025_03.xlsx Concatenada com Sucesso!\n",
@@ -689,19 +701,19 @@
     }
    ],
    "source": [
-    "arquivos = os.listdir(\"C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Venda Mesal Bruta/2025\")\n",
+    "arquivos = os.listdir(\"C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Venda Mesal Bruta/Periodo\")\n",
     "\n",
     "lista_arquvios = []\n",
     "\n",
     "for arquivo in arquivos:\n",
     "    if arquivo.endswith('.xlsx'):\n",
-    "        df = pd.read_excel(f'C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Venda Mesal Bruta/2025/{arquivo}')\n",
+    "        df = pd.read_excel(f'C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Venda Mesal Bruta/Periodo/{arquivo}')\n",
     "        lista_arquvios.append(df)\n",
     "        print(f\"Base {arquivo} Concatenada com Sucesso!\")\n",
     "\n",
     "vmb_2025_concat = pd.concat(lista_arquvios)\n",
-    "vmb_2025_concat.to_csv('C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Venda Mesal Bruta/2025/vmb_2025_concat.csv', index=False)\n",
-    "vmb_2025_concat.to_excel('C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Venda Mesal Bruta/2025/vmb_2025_concat.xlsx', index=False)\n",
+    "vmb_2025_concat.to_csv('C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Venda Mesal Bruta/Periodo/vmb_2025_concat.csv', index=False)\n",
+    "vmb_2025_concat.to_excel('C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Venda Mesal Bruta/Periodo/vmb_2025_concat.xlsx', index=False)\n",
     "print(\"Todas as Bases Concatenadas\")\n",
     "        "
    ]
