updating all_costs dicts

--- a/cortesy.ipynb
+++ b/cortesy.ipynb
@@ -30,7 +30,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import streamlit as st\n",
-    "from dictionaries import obter_dicionarios\n",
+    "from Functions.dictionaries import obter_dicionarios\n",
     "from Functions.vmb import criando_df_final_Rentabilidade\n",
     "pd.options.mode.chained_assignment = None\n",
     "#from mongo import *\n",
