adding fetch querys

--- a/tratando_bases.ipynb
+++ b/tratando_bases.ipynb
@@ -1724,7 +1724,8 @@
     "\n",
     "appointments_2024_concat = pd.concat(lista_arquvios)\n",
     "appointments_2024_concat.to_csv('C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Agendamento/2024/appointments_2024_concat.csv', index=False)\n",
-    "print(\"Todas as Bases Concatenadas\")"
+    "print(\"Todas as Bases Concatenadas\")\n",
+    "\n"
    ]
   }
  ],
